# blockoli

./: .dockerfile  .gitignore  Cargo.toml  LICENSE  README.md  build.rs  get_grammar.sh
src/: blocks.rs  main.rs  routes.rs
src/embeddings/: encoder.rs
src/vector_store/: mod.rs  sqlite.rs  vector_store.rs
