[package]
name = "blockoli"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.4.1"
anyhow = "1.0.75"
dashmap = { version = "5.5.3", features = ["rayon"] }
env_logger = "0.11.1"
fastembed = "2.0.1"
indicatif = { version = "0.16.2", features = ["rayon"] }
jwalk = "0.8.1"
kd-tree = { version = "0.5.3", features = ["rayon", "serde"] }
mimalloc = "0.1.39"
once_cell = "1.19.0"
parking_lot = "0.12.1"
phf = { version = "0.11.2", features = ["macros"] }
qdrant-client = "1.7.0"
rayon = "1.8.0"
regex = "1.10.2"
reqwest = { version = "0.11.24", features = ["json"] }
rusqlite = { version = "0.30.0", features = ["bundled"] }
serde = { version = "1.0.195", features = ["derive", "rc"] }
serde_json = "1.0.111"
# tch = "0.14.0"
# tokenizers = { version = "0.15.0", features = ["http"] }
tree-sitter = "0.20.10"
typenum = "1.17.0"
boxcar = "0.2.4"
asterisk = { path = "../asterisk" }

[dev-dependencies]
tempfile = "3.10.0"

[build-dependencies]
cc="*"

[profile.release]
lto = 'thin'
panic = 'abort'
codegen-units = 1
